[package]
name = "toyhouse_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
axum-macros = "0.3.8"
reqwest = { version =  "0.11.20", features = ["cookies"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "1.0.89" } # Serde serializion/deserialization of JSON data.
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"